deploy/kube-config/production-cert-manager/ingress/ingress.yaml
# apiVersion: extensions/v1beta1
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: comical-site-062020
  name: comical-site-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-staging
spec:
  tls:
  - hosts:
    - comical.site
    secretName: comical-site-crt
  rules:
  - host: comical.site
    http:
      paths:
      - backend:
          serviceName: comical-site-app
          servicePort: 80
